<resources>
    <string name="app_name">Elearning-module</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_course_content">CourseContentActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_server_url">something</string>
    <string name="please_wait">Please wait</string>
    <string name="ok">OK</string>
    <string name="sdcard_unmounted">SDCard not available</string>
    <string name="complete_other_courses">Complete other courses first</string>
    <string name="true_false_factory_text">একটি ছোট পরীক্ষা হয়ে যাক!</string>
    <string name="lang_dialog_title">Select Language</string>
    <string name="lang_dialog_message">You want to use the app in</string>
    <string name="language_setting">Select Language</string>
    <string name="change_lang">Change Language</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bangla">Bangla</string>
    <string name="english">English</string>
    <string name="start_exam">Start Exam</string>
    <string name="course_end_message">You completed the course.\nNow appear in the exam.</string>
    <string name="detail_result">Detail Result</string>
    <string name="result">Result</string>
    <string name="total_question">Total Question :</string>
    <string name="correct_answer">Correct Answer :</string>
    <string name="course_end">Course End</string>
    <string name="dot_provider">DOT Provider</string>
    <string name="other">Other</string>
    <string name="already_registered_login">ALREADY REGISTERED ? LOGIN</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="tb_e_learning">TB E Learning</string>
    <string name="log_in">LogIN</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="dot_id">DOT ID</string>
    <string name="your_answer_is">Your Answer is</string>
    <string name="confirm_answer">Confirm Answer</string>
    <string name="right">Right</string>
    <string name="wrong">Wrong</string>
    <string name="please_select_answer">Please select any answer</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading..Please Wait</string>
    <string name="last_page">Last Page</string>
    <string name="add_profile_photo">Add Profile Photo</string>
    <string name="complete_other_modules">Complete other modules first</string>
    <string name="locked">Locked</string>
    <string name="failed">You\'ve failed</string>
    <string name="failed_try_again">See detail Result and try again</string>
    <string name="of_page">At page %1$d of %2$d</string>
    <string name="no_data">No questions answered</string>
    <string name="trivia">Trivia</string>
    <string name="log_out">LOGOUT</string>
    <string-array name="lang_select">
        <item>English</item>
        <item>Bangla</item>
    </string-array>
</resources>
