<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mpower.org.elearning_module.activities.UserTypeSelectionActivity">
    <LinearLayout
        android:padding="5dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:src="@drawable/tb_logo"
            android:layout_width="150dp"
            android:layout_height="150dp" />
        <Button
            android:onClick="dotSignUp"
            android:layout_margin="2dp"
            android:textColor="@color/white_background"
            android:background="@drawable/button_rounded_corner"
            android:text="@string/dot_provider"
            android:layout_width="match_parent"
            android:layout_height="60dp" />
        <Button
            android:onClick="otherSignUp"
            android:layout_margin="2dp"
            android:textColor="@color/white_background"
            android:background="@drawable/button_rounded_corner"
            android:text="@string/other"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <TextView
            android:onClick="callLogin"
            android:padding="5dp"
            android:textColor="@color/mpower_color"
            android:textColorLink="@color/mpower_color"
            android:linksClickable="true"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/already_registered_login"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
