<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mpower.org.elearning_module.activities.SignUpActivity">

    <LinearLayout
        android:padding="20dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:textSize="30sp"
            android:text="@string/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:visibility="gone"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/linear_layout_DOT"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:visibility="gone"
                android:text="@string/dot_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_dot_id"
                android:hint="@string/dot_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_mobile_n0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:visibility="gone"
                android:text="@string/mobile_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_phone"
            android:inputType="phone"
            android:hint="@string/mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:visibility="gone"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_action_locked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:visibility="gone"
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginTop="10dp"
            android:onClick="signUp"
            android:id="@+id/btn_sign_up"
            android:textColor="@color/white_background"
            android:background="@drawable/button_rounded_corner"
            android:text="@string/sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>
</RelativeLayout>
