<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_weight=".5"
    android:orientation="vertical"
    android:layout_width="0dp"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Start the next Course"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.065" />
        <Button
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:id="@+id/button_start__next_course"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_rounded_corner"
            android:text="@string/course_end"
            android:textColor="@color/white_background"
            />
    </RelativeLayout>

</LinearLayout>




    <View
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/light_grey_background" />




    <LinearLayout
        android:layout_weight=".5"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/result"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/total_question"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/correct_answer"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </LinearLayout>

            <Button
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_rounded_corner"
                android:text="@string/detail_result"
                android:textColor="@color/white_background" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>